# TimescaleIface

./: .gitignore  README.md
Container/: Dockerfile  initdb.sql
TsdbProcessing/: CMakeLists.txt  Readme.md
TsdbProcessing/TSDBConnector/: CMakeLists.txt  tsdbconnector.cpp  tsdbconnector.h
TsdbProcessing/example/: main.cpp  mainIface.cpp  mainMassive.cpp  stringTest.cpp
TsdbProcessing/iTSDB/: CMakeLists.txt  TsdbInterface.cpp  TsdbInterface.h
